# booking_service

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/v1/: time_slots.py
app/core/: database.py
app/models/: timeslots.py
app/schemas/: time_slots.py
migrations/: env.py
migrations/versions/: d1c82c2c0abe_initial_async_migration.py
