[project]
name = "booking-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Anver Gadzhiev",email = "gadzhiev.anver@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic (>=2.13.4,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false